# flask-commerce

./: .coverage  .env  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Procfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  models.py
app/auth/: __init__.py  handler.py
app/cart/: __init__.py  handler.py  model.py
app/main/: __init__.py  errors.py  handler.py
app/product/: __init__.py  handler.py  model.py
app/user/: __init__.py  model.py
migrations/versions/: 0df4139fdefa_add_cart.py  62e659909ca8_fix_user_nullables.py  b4c298c3c110_initial_revision.py  fb61a9628e8f__id_to_id.py
tests/: test_user_model.py
