[tool.poetry]
name = "brasilprev"
version = "0.1.0"
description = "E-commerce backend develop in python"
authors = ["Rodrigo Cristiano <rcristianofv@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_bootstrap = "^3.3.7"
flask_sqlalchemy = "^2.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
