[tool.poetry]
name = "flask-commerce"
version = "0.1.0"
description = "E-commerce backend develop in python"
authors = ["Rodrigo Cristiano <rcristianofv@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.3"
flask-migrate = "^2.5.3"
flask-login = "^0.5.0"
psycopg2-binary = "^2.8.5"
flask_restful = "^0.3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"
coverage = "^5.1"
flasgger = "^0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
