[tool.poetry]
name = "flask-commerce"
version = "0.1.0"
description = "E-commerce backend develop in python"
authors = ["Rodrigo Cristiano <rcristianofv@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask_sqlalchemy = "^2.4.3"
flask-migrate = "^2.5.3"
flask-login = "^0.5.0"
psycopg2-binary = "^2.8.5"
flask_restful = "^0.3.8"
flasgger = "^0.9.5"
python-dotenv = "^0.15.0"
gunicorn = {version = "^20.0.4", optional = true}

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"
coverage = {extras = ["toml"], version = "^5.4"}

[tool.poetry.extras]
heroku = ["gunicorn"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
source = ["."]
command_line = "-m unittest discover tests/"
